--- a/README
+++ b/README
@@ -1,4 +1,8 @@
-Supplemental materials for "Points of Significance: Modeling infectious epidemics" (see CITATION)
+Supplemental materials for "Points of Significance: Modeling infectious epidemics" 
+
+To reference this work, see CITATION.
+
+
 
 
 
