--- a/README
+++ b/README
@@ -1,6 +1,6 @@
-Supplemental materials for "Points of Significance: Modeling infectious epidemics" 
+Supplemental materials for the Nature Methods "Points of Significance: Modeling infectious epidemics"
 
-To reference this work, see CITATION.
+To cite this work, see CITATION.
 
 
 
