--- a/INSTALL
+++ b/INSTALL
@@ -2,7 +2,11 @@ This is an R Shiny app.
 
 1. REMOTE ACCESS
 
-https://martinkrz.shinyapps.io/posepi1/
+https://shiny.bcgsc.ca/posepi1/
+
+2. CODE
+
+https://github.com/martinkrz/posepi1
 
 2. LOCAL EXECUTION
 
